--- a/packages/mvp/package.json
+++ b/packages/mvp/package.json
@@ -18,6 +18,8 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "supertest": "^6.3.3",
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
   }
 }
